# Email_Marketing_Product

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.uat.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  entrypoint.sh  gunicorn.conf.py  pyproject.toml
backend/migrations/versions/: 32f2d4d20865_initial.py  75d5046fe71f_add_iam_tables.py  7a1c9f4c4ed4_add_password_hash_to_users.py  7c0b3c8156b2_add_indexes_for_latency.py  9b5e2d6f0b8a_add_email_templates.py  ed0fbf1d3d91_add_campaigns_and_sends.py
backend/src/email_marketing_backend/: __init__.py  app.py  celery_app.py  cli.py  config.py  errors.py  extensions.py  security.py
backend/src/email_marketing_backend/api/: __init__.py  auth.py  authz.py  campaigns.py  routes.py  schemas.py  templates.py
backend/src/email_marketing_backend/db/: __init__.py
backend/src/email_marketing_backend/db/models/: __init__.py  base.py  campaign.py  contact.py  email_template.py  organization.py  role.py  user.py
backend/src/email_marketing_backend/services/: email.py  iam.py  rendering.py
backend/src/email_marketing_backend/tasks/: __init__.py  campaigns.py  example.py
backend/src/instance/: app.db
backend/tests/: conftest.py  test_auth.py  test_campaigns.py  test_health.py  test_organizations.py  test_tasks.py  test_templates.py
deploy/nginx/: nginx.conf
deploy/web/: Dockerfile
docs/: iam_architecture.md  product_strategy.md
frontend/: .env.example  Dockerfile  cypress.config.ts  package-lock.json  package.json
(+25 files in other folders)
